--- a/Space_Missions_Analysis.ipynb
+++ b/Space_Missions_Analysis.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
         "_kg_hide-input": true,
@@ -68,16 +68,7 @@
         },
         "tags": []
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/opt/homebrew/lib/python3.11/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
-            "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -104,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "DHEULCOjxIIm"
       },
@@ -133,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
         "_kg_hide-input": true,
@@ -176,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "0tIuYcYNlPFQ"
       },
@@ -318,7 +309,7 @@
               "4  StatusActive  145.0        Success  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -331,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "0dw2hd9UlPmP"
       },
@@ -386,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "wWQvnJb0k2Ig"
       },
@@ -399,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "SfxVooCYk2As"
       },
@@ -593,7 +584,7 @@
               "[100 rows x 7 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -622,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "Fh1-libjkJIK"
       },
@@ -722,7 +713,7 @@
               "freq             3534    136           3879  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -754,7 +745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "rxvcIrtskxYB"
       },
@@ -765,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "qgneHUbWkw5v"
       },
@@ -806,7 +797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -831,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "id": "SxmOWS9cmTq6"
       },
@@ -860,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -899,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "id": "83kY1alqmUhb"
       },
@@ -928,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "id": "bdmXcaopmUeZ"
       },
@@ -976,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "PLOMhzZFnSCO"
       },
@@ -997,7 +988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "id": "ru0IcY4nnSFU"
       },
@@ -1057,52 +1048,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Stargazer, Base Aerea de Gando, Gran Canaria\n",
-            "Stargazer, Base Aerea de Gando, Gran Canaria\n"
+            "0              LC-39A, Kennedy Space Center, Florida, USA\n",
+            "1       Site 9401 (SLS-2), Jiuquan Satellite Launch Ce...\n",
+            "2                           Pad A, Boca Chica, Texas, USA\n",
+            "3            Site 200/39, Baikonur Cosmodrome, Kazakhstan\n",
+            "4                SLC-41, Cape Canaveral AFS, Florida, USA\n",
+            "                              ...                        \n",
+            "4319             LC-18A, Cape Canaveral AFS, Florida, USA\n",
+            "4320             LC-26A, Cape Canaveral AFS, Florida, USA\n",
+            "4321             LC-18A, Cape Canaveral AFS, Florida, USA\n",
+            "4322            Site 1/5, Baikonur Cosmodrome, Kazakhstan\n",
+            "4323            Site 1/5, Baikonur Cosmodrome, Kazakhstan\n",
+            "Name: Location, Length: 4324, dtype: object\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "0       None\n",
-              "1       None\n",
-              "2       None\n",
-              "3       None\n",
-              "4       None\n",
-              "        ... \n",
-              "4319    None\n",
-              "4320    None\n",
-              "4321    None\n",
-              "4322    None\n",
-              "4323    None\n",
-              "Name: Location, Length: 4324, dtype: object"
-            ]
-          },
-          "execution_count": 35,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
         "def process_location(location):\n",
         "    if 'Gran Canaria' in location:\n",
-        "      print(location)\n",
-        "    else:\n",
-        "       next\n",
+        "      return \"USA\"\n",
+        "    elif r'New Mexico' in location:\n",
+        "       return \"USA\"\n",
         "\n",
-        "df_data['Location'].apply(process_location)"
+        "df_data['Location'].apply(process_location)\n",
+        "\n",
+        "print(df_data['Location'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 23,
       "metadata": {
         "id": "Y46-4GHrozhF"
       },
@@ -1153,12 +1135,12 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[33], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(launches_by_country)\n\u001b[1;32m     11\u001b[0m \u001b[39m# Create a new column for alpha-3 country codes\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m launches_by_country[\u001b[39m'\u001b[39m\u001b[39mCountry_Code\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m launches_by_country[\u001b[39m'\u001b[39;49m\u001b[39mCountry\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(\u001b[39mlambda\u001b[39;49;00m x: countries\u001b[39m.\u001b[39;49mget(x) \u001b[39mif\u001b[39;49;00m countries\u001b[39m.\u001b[39;49mget(x) \u001b[39melse\u001b[39;49;00m \u001b[39m'\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Print the updated DataFrame\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mprint\u001b[39m(df_data)\n",
+            "Cell \u001b[0;32mIn[23], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(launches_by_country)\n\u001b[1;32m     11\u001b[0m \u001b[39m# Create a new column for alpha-3 country codes\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m launches_by_country[\u001b[39m'\u001b[39m\u001b[39mCountry_Code\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m launches_by_country[\u001b[39m'\u001b[39;49m\u001b[39mCountry\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(\u001b[39mlambda\u001b[39;49;00m x: countries\u001b[39m.\u001b[39;49mget(x) \u001b[39mif\u001b[39;49;00m countries\u001b[39m.\u001b[39;49mget(x) \u001b[39melse\u001b[39;49;00m \u001b[39m'\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Print the updated DataFrame\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mprint\u001b[39m(df_data)\n",
             "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/core/series.py:4771\u001b[0m, in \u001b[0;36mSeries.apply\u001b[0;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[1;32m   4661\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[1;32m   4662\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   4663\u001b[0m     func: AggFuncType,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4666\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[1;32m   4667\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[1;32m   4668\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   4669\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[1;32m   4670\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4769\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[1;32m   4770\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 4771\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
             "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/core/apply.py:1123\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1120\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[1;32m   1122\u001b[0m \u001b[39m# self.f is Callable\u001b[39;00m\n\u001b[0;32m-> 1123\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
             "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/core/apply.py:1174\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1172\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1173\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[0;32m-> 1174\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[1;32m   1175\u001b[0m             values,\n\u001b[1;32m   1176\u001b[0m             f,\n\u001b[1;32m   1177\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[1;32m   1178\u001b[0m         )\n\u001b[1;32m   1180\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[1;32m   1181\u001b[0m     \u001b[39m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[1;32m   1182\u001b[0m     \u001b[39m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[1;32m   1183\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(\u001b[39mlist\u001b[39m(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
             "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/_libs/lib.pyx:2924\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
-            "Cell \u001b[0;32mIn[33], line 12\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(launches_by_country)\n\u001b[1;32m     11\u001b[0m \u001b[39m# Create a new column for alpha-3 country codes\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m launches_by_country[\u001b[39m'\u001b[39m\u001b[39mCountry_Code\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m launches_by_country[\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: countries\u001b[39m.\u001b[39mget(x) \u001b[39mif\u001b[39;00m countries\u001b[39m.\u001b[39;49mget(x) \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Print the updated DataFrame\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mprint\u001b[39m(df_data)\n",
+            "Cell \u001b[0;32mIn[23], line 12\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(launches_by_country)\n\u001b[1;32m     11\u001b[0m \u001b[39m# Create a new column for alpha-3 country codes\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m launches_by_country[\u001b[39m'\u001b[39m\u001b[39mCountry_Code\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m launches_by_country[\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: countries\u001b[39m.\u001b[39mget(x) \u001b[39mif\u001b[39;00m countries\u001b[39m.\u001b[39;49mget(x) \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Print the updated DataFrame\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mprint\u001b[39m(df_data)\n",
             "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/iso3166/__init__.py:505\u001b[0m, in \u001b[0;36m_CountryLookup.get\u001b[0;34m(self, key, default)\u001b[0m\n\u001b[1;32m    502\u001b[0m         r \u001b[39m=\u001b[39m _by_apolitical_name\u001b[39m.\u001b[39mget(k, default)\n\u001b[1;32m    504\u001b[0m \u001b[39mif\u001b[39;00m r \u001b[39m==\u001b[39m NotFound:\n\u001b[0;32m--> 505\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n\u001b[1;32m    507\u001b[0m \u001b[39mreturn\u001b[39;00m r\n",
             "\u001b[0;31mKeyError\u001b[0m: 'Canaria'"
           ]
@@ -1184,7 +1166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "ESGRWiX6ozZG"
       },
